<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    tools:context=".activities.SplashActivity">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_75sdp"
        android:src="@mipmap/ic_launcher"
        android:scaleType="centerCrop"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/tvTitlee"
        android:layout_marginBottom="@dimen/_20sdp" />

    <TextView
        android:id="@+id/tvTitlee"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        style="@style/txtStyleWhite"
        android:background="@color/colorTextGray"
        android:text="@string/logintitlestarsurvey"
        android:gravity="center"
        android:paddingTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:layout_above="@+id/LLCenter"
        android:layout_marginBottom="@dimen/_30sdp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/LLCenter"
        android:layout_centerInParent="true">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/LLUsername"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_27sdp"
        android:background="@drawable/shape"
        android:layout_above="@+id/LLPassword"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_50sdp"
        android:layout_marginRight="@dimen/_50sdp"
        android:orientation="horizontal">

        <ImageView
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/_5sdp"
            android:layout_width="@dimen/_15sdp"
            android:layout_height="@dimen/_15sdp"
            android:src="@drawable/user_login_icon" />
        <!--android:text="admin"-->
        <!--admin1234-->
        <EditText
            android:id="@+id/edtUserName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:singleLine="true"
            android:nextFocusDown="@+id/edtPassword"
            android:hint="@string/username"
            android:text=""
            android:textColorHint="@color/colorBackground"
            android:textColor="@color/black"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:background="@color/white"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LLPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_27sdp"
        android:background="@drawable/shape"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/_50sdp"
        android:layout_marginRight="@dimen/_50sdp"
        android:layout_marginBottom="@dimen/_17sdp"
        android:orientation="horizontal">
        <ImageView
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:layout_margin="@dimen/_5sdp"
            android:layout_width="@dimen/_15sdp"
            android:layout_height="@dimen/_15sdp"
            android:src="@drawable/key_login_icon"
            />
        <!--userName: admin1234-->
        <!--Pwd: admin1234-->

        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text=""
            android:singleLine="true"
            android:hint="@string/password"
            android:textColorHint="@color/colorBackground"
            android:textColor="@color/black"
            android:layout_marginRight="@dimen/_5sdp"
            android:layout_marginLeft="@dimen/_5sdp"
            android:background="@color/white"
            android:inputType="textPassword"
            android:imeOptions="actionDone" />
    </LinearLayout>
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_45sdp"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/LLCenter"
        android:background="@drawable/login_btn_selector"
        android:layout_centerHorizontal="true" />
</LinearLayout>
</ScrollView>
</RelativeLayout>
</RelativeLayout>
