<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/_250sdp"
    android:layout_height="match_parent"
    android:background="@android:color/white">


    <RelativeLayout
        android:id="@+id/nav_header_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_170sdp"
        android:background="@drawable/sidebar_header_bg"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_15sdp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/colorDrawerText"
            android:text="@string/welcome"
            android:layout_marginTop="@dimen/_7sdp"
            android:id="@+id/tvWelcome"
            />
        <LinearLayout
            android:id="@+id/LLDrawerUname"
            android:layout_below="@+id/tvWelcome"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_7sdp"
            android:layout_height="@dimen/_35sdp">
            <ImageView
                android:layout_width="@dimen/_15sdp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/logout_user_icon"
                android:layout_marginRight="@dimen/_7sdp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="@dimen/_17sdp"
                android:layout_centerHorizontal="true"
                android:textColor="@color/colorDisplayNameText"
                android:text="PAS_User1"

                android:id="@+id/tvUserName"
                android:textStyle="bold"
                android:gravity="center_vertical"
                />

        </LinearLayout>
<LinearLayout
    android:id="@+id/LLDrawerButtons"
    android:layout_below="@+id/LLDrawerUname"
    android:layout_width="wrap_content"
    android:layout_height="@dimen/_30sdp"
    android:orientation="horizontal"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="@dimen/_12sdp"
    >
    <Button
        android:id="@+id/btnDrawerProfile"
        android:layout_width="@dimen/_110sdp"
        android:layout_height="match_parent"
        android:background="@drawable/shape_drawer_button"
        android:textSize="@dimen/_12sdp"
        android:textColor="@color/colorDrawerText"
        android:text="@string/profile"
        android:layout_marginRight="@dimen/_17sdp"

        />
    <LinearLayout
        android:id="@+id/LLDrawerLogout"
        android:layout_width="@dimen/_110sdp"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:background="@drawable/shape_drawer_button"
        android:gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/colorDrawerText"
            android:text="@string/logout"
            android:layout_marginLeft="@dimen/_7sdp"
            android:layout_marginRight="@dimen/_7sdp"

            />
        <ImageView
            android:layout_width="@dimen/_15sdp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:src="@drawable/logout_icon"
            android:layout_marginRight="@dimen/_7sdp"
            />
    </LinearLayout>

</LinearLayout>
<LinearLayout
    android:id="@+id/LLDrawerAuditHeader"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_30sdp"

    android:layout_alignParentBottom="true"
    android:orientation="horizontal"
    android:background="@color/colorDrawerSurveyNameBack"
    >
    <ImageView
        android:layout_width="@dimen/_17sdp"
        android:layout_height="@dimen/_17sdp"
        android:layout_gravity="center_vertical"
        android:src="@drawable/sidebar_survey_icon"
        android:layout_marginLeft="@dimen/_7sdp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textSize="@dimen/_15sdp"
        android:gravity="center_vertical"
        android:textColor="@color/colorDrawerText"
        android:text="@string/welcome"

        android:id="@+id/tvHeaderSurveyName"
        android:layout_marginLeft="@dimen/_8sdp"
        />
</LinearLayout>
    </RelativeLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/drawerList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/nav_header_container"
        android:background="@drawable/sidebar_bg"
         />


</RelativeLayout>